--- a/Thermory.Web/Views/Order/Index.cshtml
+++ b/Thermory.Web/Views/Order/Index.cshtml
@@ -29,10 +29,13 @@
             },
             columns: [
                 {
+                    field: 'OrderNumber', caption: 'Order Number', size: '10%', sortable: true, resizable: true, render: 'text'
+                },
+                {
                     field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, render: 'text'
                 },
                 {
-                    field: 'CreatedOn', caption: 'Created On', size: '40%', sortable: true, resizable: true, render: 'date'
+                    field: 'CreatedOn', caption: 'Created On', size: '30%', sortable: true, resizable: true, render: 'date'
                 },
                 {
                     field: 'CreatedBy', caption: 'Created By', size: '40%', sortable: true, resizable: true, render: 'text'
