--- a/Thermory.Web/Views/Order/Index.cshtml
+++ b/Thermory.Web/Views/Order/Index.cshtml
@@ -29,7 +29,7 @@
             },
             columns: [
                 {
-                    field: 'OrderNumber', caption: 'Order Number', size: '10%', sortable: true, resizable: true, render: 'text'
+                    field: 'OrderNumberString', caption: 'Order Number', size: '10%', sortable: true, resizable: true, render: 'text'
                 },
                 {
                     field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, render: 'text'
@@ -45,7 +45,7 @@
                 { field: 'CreatedOn', direction: 'desc' }
             ],
             onSelect: function (event) {
-                window.location = ('@Url.Action("EditOrder", "Order")/' + event.recid);
+                window.location = ('@Url.Action("Review", "Order")/' + event.recid);
             }
         });
     });
