--- a/Thermory.Web/Views/Order/Review.cshtml
+++ b/Thermory.Web/Views/Order/Review.cshtml
@@ -3,14 +3,11 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     var firstCategoryId = Model.LumberOrderForms.First().LumberCategory.Id;
-    var action = Model.Order == null ? "Create" : "Edit";
-    var orderType = Model.OrderType == OrderTypes.PurchaseOrder ? "Purchase" : "Sales";
-    var orderNumber = Model.Order == null ? "" : Model.Order.OrderNumberString;
-    var title = string.Format("{0} {1} Order {2}", action, orderType, orderNumber);
+    var orderType = string.Format("{0} Order", Model.OrderType == OrderTypes.PurchaseOrder ? "Purchase" : "Sales");
     var orderId = Model.Order == null ? Guid.Empty : Model.Order.Id;
 }
 
-<h3>@title</h3>
+<h3>@orderType @Model.Order.OrderNumberString</h3>
 
 <div id="worksheetPanel">
     <ul class="nav nav-tabs" data-tabs="tabs">
@@ -46,56 +43,27 @@
             }
         }
     </div>
-    <button type="button" onclick=" saveOrder();">Save</button>
+    @if (!Model.Order.IsDeleted)
+    {
+        <button type="button" onclick="window.location = ('@Url.Action("EditOrder", "Order", new RouteValueDictionary{{"id", Model.Order.Id}})');">Edit</button>
+        <button type="button" onclick="deleteOrder();">Delete</button>
+    }
 </div>
 
 <div id="savingPanel" style="display: none;">Saving...</div>
 
 <script type="text/javascript">
-    $(document).ready(function () {
-        $('input[name=lumberQty],[name=miscQty]').keydown(function (e) {
-            // Allow: backspace, delete, tab, escape, enter and .
-            if ($.inArray(e.keyCode, [46, 8, 9, 27, 13, 110, 190]) !== -1 ||
-                // Allow: Ctrl+A, Command+A
-                (e.keyCode == 65 && (e.ctrlKey === true || e.metaKey === true)) ||
-                // Allow: home, end, left, right, down, up
-                (e.keyCode >= 35 && e.keyCode <= 40)) {
-                // let it happen, don't do anything
-                return;
-            }
-            // Ensure that it is a number and stop the keypress
-            if ((e.shiftKey || (e.keyCode < 48 || e.keyCode > 57)) && (e.keyCode < 96 || e.keyCode > 105)) {
-                e.preventDefault();
-            }
-        });
-    });
-
-    function saveOrder() {
+    function deleteOrder() {
         $('#worksheetPanel').hide();
         $('#savingPanel').show();
-
-        var lumberProducts = getInventory('lumber');
-        var miscProducts = getInventory('misc');
-
-        if (lumberProducts.length == 0 && miscProducts == 0) {
-            $('#worksheetPanel').show();
-            $('#savingPanel').hide();
-            return;
-        }
-
-        var lumberJson = JSON.stringify(lumberProducts);
-        var miscJson = JSON.stringify(miscProducts);
-        var postData = '{"orderType" : "@Model.OrderType", "orderId" : "@orderId", "lumberOrderQuantities" : ' + lumberJson + ', "miscOrderQuantities" : ' + miscJson + '}';
-
-        console.log(lumberJson);
-        console.log(miscJson);
+        var postData = '{"orderId" : "@orderId"}';
         console.log(postData);
 
         $('#worksheetPanel').show();
         $('#savingPanel').hide();
         $.ajax({
             type: 'POST',
-            url: '@Url.Action("SaveOrder", "Order")',
+            url: '@Url.Action("DeleteOrder", "Order")',
             contentType: 'application/json',
             dataType: 'json',
             data: postData,
@@ -110,28 +78,5 @@
                 $('#savingPanel').hide();
             }
         });
-    }
-
-    function getInventory(prefix) {
-        var products = new Array();
-        var query = 'input[name=\'' + prefix + 'Qty\']';
-        $(query).each(function () {
-            var id = $(this).attr('id');
-            var productId = $(this).attr('productId');
-            var qty = $(this).val();
-
-            if (qty > 0) {
-                products.push(createProductLineItem(id, productId, qty));
-            }
-        });
-        return products;
-    }
-
-    function createProductLineItem(id, productId, qty) {
-        return {
-            Id: id,
-            ProductId: productId,
-            Quantity: qty
-        };
     }
 </script>
