--- a/Thermory.Web/Views/Order/Index.cshtml
+++ b/Thermory.Web/Views/Order/Index.cshtml
@@ -35,10 +35,13 @@
                     field: 'OrderType', caption: 'Order Type', size: '20%', sortable: true, resizable: true, render: 'text'
                 },
                 {
-                    field: 'CreatedOn', caption: 'Created On', size: '30%', sortable: true, resizable: true, render: 'date'
+                    field: 'CreatedOn', caption: 'Created On', size: '25%', sortable: true, resizable: true, render: 'date'
                 },
                 {
-                    field: 'CreatedBy', caption: 'Created By', size: '40%', sortable: true, resizable: true, render: 'text'
+                    field: 'CreatedBy', caption: 'Created By', size: '35%', sortable: true, resizable: true, render: 'text'
+                },
+                {
+                    field: 'IsDeleted', caption: 'Deleted', size: '10%', sortable: true, resizable: true, render: 'text'
                 }
             ],
             sortData: [
