--- a/Thermory.Web/Views/Order/Review.cshtml
+++ b/Thermory.Web/Views/Order/Review.cshtml
@@ -1,66 +1,109 @@
 ﻿@using Thermory.Domain.Enums
-@model Thermory.Web.Models.OrderForm
+@model Thermory.Domain.Models.Order
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var firstCategoryId = Model.LumberOrderForms.First().LumberCategory.Id;
-    var orderType = string.Format("{0} Order", Model.OrderType == OrderTypes.PurchaseOrder ? "Purchase" : "Sales");
-    var orderId = Model.Order == null ? Guid.Empty : Model.Order.Id;
+    var orderType = string.Format("{0} Order", Model.OrderType.OrderTypeEnum == OrderTypes.PurchaseOrder ? "Purchase" : "Sales");
+    var orderLumberCategories = Model.OrderLumberLineItems.Select(i => i.LumberProduct.LumberType.LumberSubCategory.LumberCategory).Distinct();
+    var orderLumberSubCategories = Model.OrderLumberLineItems.Select(i => i.LumberProduct.LumberType.LumberSubCategory).Distinct();
+    var orderLumberTypes = Model.OrderLumberLineItems.Select(i => i.LumberProduct.LumberType).Distinct();
+    var orderMiscSubCategories = Model.OrderMiscellaneousLineItems.Select(i => i.MiscellaneousProduct.MiscellaneousSubCategory).Distinct();
+    var orderMiscCategories = Model.OrderMiscellaneousLineItems.Select(i => i.MiscellaneousProduct.MiscellaneousSubCategory.MiscellaneousCategory).Distinct();
 }
 
-<h3>@orderType @Model.Order.OrderNumberString</h3>
-
-<div id="worksheetPanel">
-    <ul class="nav nav-tabs" data-tabs="tabs">
-        @{
-            foreach (var orderForm in Model.LumberOrderForms)
-            {
-                var category = orderForm.LumberCategory;
-                var active = category.Id == firstCategoryId ? "class=active" : "";
-                <li @active><a href="#@orderForm.LumberCategory.Id" data-toggle="tab">@category.Name</a></li>
-            }
-            foreach (var category in Model.MiscellaneousOrderForms.Select(orderForm => orderForm.MiscellaneousCategory))
-            {
-                <li><a href="#@category.Id" data-toggle="tab">@category.Name</a></li>
-            }
-        }
-    </ul>
-    <div class="tab-content" style="height: 500px; overflow: auto;">
-        @{
-            foreach (var orderForm in Model.LumberOrderForms)
-            {
-                var category = orderForm.LumberCategory;
-                var active = category.Id == firstCategoryId ? "active" : "";
-                <div id="@category.Id" class="tab-pane @active">
-                    @Html.Partial("_LumberLineItem", orderForm)
-                </div>
-            }
-            foreach (var orderForm in Model.MiscellaneousOrderForms)
-            {
-                var category = orderForm.MiscellaneousCategory;
-                <div id="@category.Id" class="tab-pane">
-                    @Html.Partial("_MiscellaneousLineItem", orderForm)
-                </div>
-            }
-        }
-    </div>
-    @if (!Model.Order.IsDeleted)
+<h1>@orderType @Model.OrderNumberString</h1>
+@if (@Model.Customer != null)
+{
+    <h2>@Model.Customer.Name</h2>
+}
+@if (!Model.IsDeleted)
+{
+    <br/>
+    <button type="button" onclick="window.location = ('@Url.Action("EditOrder", "Order", new RouteValueDictionary{{"id", Model.Id}})');">Edit</button>
+    <button type="button" onclick="deleteOrder();">Delete</button>
+}
+@{
+    foreach (var category in orderLumberCategories.OrderBy(c => c.SortOrder))
     {
-        <button type="button" onclick="window.location = ('@Url.Action("EditOrder", "Order", new RouteValueDictionary{{"id", Model.Order.Id}})');">Edit</button>
-        <button type="button" onclick="deleteOrder();">Delete</button>
+        foreach (var subCategory in orderLumberSubCategories.OrderBy(s => s.SortOrder).Where(s => s.LumberCategoryId == category.Id))
+        {
+            foreach (var lumberType in orderLumberTypes.OrderBy(s => s.SortOrder).Where(s => s.LumberSubCategoryId == subCategory.Id))
+            {
+                var totalLinearFeet = 0.0;
+                var totalSquareFeet = 0.0;
+                var totalPieces = 0;
+                <h3><strong>@category.Name:</strong> @subCategory.Name</h3>
+                <h5><em>@lumberType.Name</em></h5>
+                <table class="table table-striped table-condensed" style="width: 800px;">
+                    <thead>
+                        <tr>
+                            <th>Length</th>
+                            <th>Width</th>
+                            <th>Quantity</th>
+                            <th>Linear Feet</th>
+                            <th>Square Feet</th>
+                        </tr>
+                    </thead>
+                    @foreach (var lineItem in Model.OrderLumberLineItems.Where(li => li.LumberProduct.LumberType.Id == lumberType.Id))
+                    {
+                        totalLinearFeet += lineItem.LinearFeet;
+                        totalSquareFeet += lineItem.SquareFeet;
+                        totalPieces += lineItem.Quantity;
+                        <tr>
+                            <td>@lineItem.LumberProduct.LengthInInches"</td>
+                            <td>@lineItem.LumberProduct.LumberType.LumberSubCategory.WidthInInches"</td>
+                            <td>@lineItem.Quantity</td>
+                            <td>@lineItem.LinearFeet ft</td>
+                            <td>@lineItem.SquareFeet ft<sup>2</sup></td>
+                        </tr>
+                    }
+                    <tr>
+                        <td>Total</td>
+                        <td>&nbsp;</td>
+                        <td>@totalPieces</td>
+                        <td>@totalLinearFeet ft</td>
+                        <td>@totalSquareFeet ft<sup>2</sup></td>
+                    </tr>
+                </table>
+            }
+        }
     }
-</div>
+    foreach (var category in orderMiscCategories)
+    {
+        <h3><strong>@category.Name</strong></h3>
+        foreach (var subCategory in orderMiscSubCategories.OrderBy(s => s.SortOrder).Where(s => s.MiscellaneousCategoryId == category.Id))
+        {
+            <table class="table table-striped table-condensed" style="width: 500px;">
+                <thead>
+                    <tr>
+                        <th>Sub Category</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Quantity</th>
+                    </tr>
+                </thead>
+                <tr>
+                    @foreach (var lineItem in Model.OrderMiscellaneousLineItems.Where(li => li.MiscellaneousProduct.MiscellaneousSubCategory.Id == subCategory.Id))
+                    {
+                        <td>@subCategory.Name</td>
+                        <td>@lineItem.MiscellaneousProduct.Name</td>
+                        <td>@lineItem.MiscellaneousProduct.Description</td>
+                        <td>@lineItem.Quantity</td>
+                    }
+                </tr>
+            </table>
+        }
+    }
+}
 
-<div id="savingPanel" style="display: none;">Saving...</div>
+<div id="deletingPanel" style="display: none;">Deleting...</div>
 
 <script type="text/javascript">
     function deleteOrder() {
         $('#worksheetPanel').hide();
-        $('#savingPanel').show();
-        var postData = '{"orderId" : "@orderId"}';
+        $('#deletingPanel').show();
+        var postData = '{"orderId" : "@Model.Id"}';
         console.log(postData);
 
-        $('#worksheetPanel').show();
-        $('#savingPanel').hide();
         $.ajax({
             type: 'POST',
             url: '@Url.Action("DeleteOrder", "Order")',
@@ -75,7 +118,7 @@
                 console.log(status);
                 console.log(request);
                 $('#worksheetPanel').show();
-                $('#savingPanel').hide();
+                $('#deletingPanel').hide();
             }
         });
     }
