--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -14,6 +14,12 @@
 <h3>Progress Report:</h3>
 <ul>
     <li>
+        <h5>4/1/2016</h5>
+        <ul>
+            <li>Added customers to order.</li>
+        </ul>
+    </li>
+    <li>
         <h5>3/31/2016</h5>
         <ul>
             <li>Completed order review.</li>
