--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -17,6 +17,8 @@
         <h5>4/1/2016</h5>
         <ul>
             <li>Added customers to order.</li>
+            <li>Added error handling page.</li>
+            <li>Added page not found page.</li>
         </ul>
     </li>
     <li>
