--- a/Thermory.Web/Views/Order/Review.cshtml
+++ b/Thermory.Web/Views/Order/Review.cshtml
@@ -99,6 +99,8 @@
 
 <script type="text/javascript">
     function deleteOrder() {
+        if (!window.confirm("If you delete an order by mistake you will have to create a new order. Are you sure you want to delete this order?"))
+            return;
         $('#worksheetPanel').hide();
         $('#deletingPanel').show();
         var postData = '{"orderId" : "@Model.Id"}';
