--- a/Thermory.Web/Views/Inventory/Audit.cshtml
+++ b/Thermory.Web/Views/Inventory/Audit.cshtml
@@ -18,7 +18,7 @@
             }
 }
     </ul>
-    <div class="tab-content" style="height: 500px; overflow: auto;">
+    <div class="tab-content">
         @{
             foreach (var category in Model.LumberCategories)
             {
