--- a/Thermory.Web/Views/Order/Review.cshtml
+++ b/Thermory.Web/Views/Order/Review.cshtml
@@ -19,7 +19,7 @@
 {
     <br/>
     <button type="button" onclick="window.location = ('@Url.Action("EditOrder", "Order", new RouteValueDictionary{{"id", Model.Id}})');">Edit</button>
-    <button type="button" onclick="deleteOrder();">Delete</button>
+    <button type="button" id="deleteButton" data-toggle="confirmation">Delete</button>
 }
 @{
     foreach (var category in orderLumberCategories.OrderBy(c => c.SortOrder))
@@ -98,9 +98,14 @@
 <div id="deletingPanel" style="display: none;">Deleting...</div>
 
 <script type="text/javascript">
+    $(document).ready(function() {
+        $('#deleteButton').confirmation({
+            onConfirm: deleteOrder,
+            title: "If you delete an order by mistake you will have to create a new order. Are you sure you want to delete this order?"
+        });
+    });
+
     function deleteOrder() {
-        if (!window.confirm("If you delete an order by mistake you will have to create a new order. Are you sure you want to delete this order?"))
-            return;
         $('#worksheetPanel').hide();
         $('#deletingPanel').show();
         var postData = '{"orderId" : "@Model.Id"}';
