--- a/Thermory.Web/Views/Order/Review.cshtml
+++ b/Thermory.Web/Views/Order/Review.cshtml
@@ -1,13 +1,10 @@
 ﻿@using Thermory.Domain.Enums
+@using Thermory.Web.Models
 @model Thermory.Web.Models.OrderReview
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     var orderType = string.Format("{0} Order", Model.Order.OrderType.OrderTypeEnum == OrderTypes.PurchaseOrder ? "Purchase" : "Sales");
-    var orderLumberCategories = Model.Order.OrderLumberLineItems.Select(i => i.LumberProduct.LumberType.LumberSubCategory.LumberCategory).Distinct();
-    var orderLumberSubCategories = Model.Order.OrderLumberLineItems.Select(i => i.LumberProduct.LumberType.LumberSubCategory).Distinct();
-    var orderLumberTypes = Model.Order.OrderLumberLineItems.Select(i => i.LumberProduct.LumberType).Distinct();
-    var orderMiscSubCategories = Model.Order.OrderMiscellaneousLineItems.Select(i => i.MiscellaneousProduct.MiscellaneousSubCategory).Distinct();
-    var orderMiscCategories = Model.Order.OrderMiscellaneousLineItems.Select(i => i.MiscellaneousProduct.MiscellaneousSubCategory.MiscellaneousCategory).Distinct();
+    var adjustmentMultiplier = Model.Order.OrderType.OrderTypeEnum == OrderTypes.PurchaseOrder ? 1 : -1;
 }
 
 <h3><strong>@orderType @Model.Order.OrderNumberString</strong></h3>
@@ -32,89 +29,37 @@
     <div class="tab-content">
         <div id="orderSummary" class="tab-pane active">
             @{
-                foreach (var category in orderLumberCategories.OrderBy(c => c.SortOrder))
-                {
-                    foreach (var subCategory in orderLumberSubCategories.OrderBy(s => s.SortOrder).Where(s => s.LumberCategoryId == category.Id))
-                    {
-                        foreach (var lumberType in orderLumberTypes.OrderBy(s => s.SortOrder).Where(s => s.LumberSubCategoryId == subCategory.Id))
-                        {
-                            var totalLinearFeet = 0.0;
-                            var totalSquareFeet = 0.0;
-                            var totalPieces = 0;
-                            <h3><strong>@category.Name:</strong> @subCategory.Name</h3>
-                            <h5><em>@lumberType.Name</em></h5>
-                            <table class="table table-striped table-condensed" style="width: 800px;">
-                                <thead>
-                                    <tr>
-                                        <th>Length</th>
-                                        <th>Width</th>
-                                        <th>Quantity</th>
-                                        <th>Linear Feet</th>
-                                        <th>Square Feet</th>
-                                    </tr>
-                                </thead>
-                                @foreach (var lineItem in Model.Order.OrderLumberLineItems.Where(li => li.LumberProduct.LumberType.Id == lumberType.Id))
-                                {
-                                    totalLinearFeet += lineItem.LinearFeet;
-                                    totalSquareFeet += lineItem.SquareFeet;
-                                    totalPieces += lineItem.Quantity;
-                                    <tr>
-                                        <td>@lineItem.LumberProduct.LengthInInches"</td>
-                                        <td>@lineItem.LumberProduct.LumberType.LumberSubCategory.WidthInInches"</td>
-                                        <td>@lineItem.Quantity</td>
-                                        <td>@lineItem.LinearFeet ft</td>
-                                        <td>@lineItem.SquareFeet ft<sup>2</sup></td>
-                                    </tr>
-                                }
-                                <tr>
-                                    <td>Total</td>
-                                    <td>&nbsp;</td>
-                                    <td>@totalPieces</td>
-                                    <td>@totalLinearFeet ft</td>
-                                    <td>@totalSquareFeet ft<sup>2</sup></td>
-                                </tr>
-                            </table>
-                        }
-                    }
-                }
-                foreach (var category in orderMiscCategories)
-                {
-                    <h3><strong>@category.Name</strong></h3>
-                    foreach (var subCategory in orderMiscSubCategories.OrderBy(s => s.SortOrder).Where(s => s.MiscellaneousCategoryId == category.Id))
-                    {
-                        <table class="table table-striped table-condensed" style="width: 500px;">
-                            <thead>
-                                <tr>
-                                    <th>Sub Category</th>
-                                    <th>Name</th>
-                                    <th>Description</th>
-                                    <th>Quantity</th>
-                                </tr>
-                            </thead>
-                            <tr>
-                                @foreach (var lineItem in Model.Order.OrderMiscellaneousLineItems.Where(li => li.MiscellaneousProduct.MiscellaneousSubCategory.Id == subCategory.Id))
-                                {
-                                    <td>@subCategory.Name</td>
-                                    <td>@lineItem.MiscellaneousProduct.Name</td>
-                                    <td>@lineItem.MiscellaneousProduct.Description</td>
-                                    <td>@lineItem.Quantity</td>
-                                }
-                            </tr>
-                        </table>
-                    }
-                }
+                @Html.Partial("_LumberProductReview", Model)
+                @Html.Partial("_MiscellaneousProductReview", Model)
             }
         </div>
         <div id="orderTransactions" class="tab-pane">
             @foreach (var transaction in Model.InventoryTransactions)
             {
-                <div>@transaction.CreatedBy.FullName</div>
-                <div>@transaction.CreatedOn</div>
-                <div>@transaction.TransactionType.Name</div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <strong>@transaction.TransactionType.Description by @transaction.CreatedBy.FullName</strong>
+                        <em>@transaction.CreatedOn</em>
+                    </div>
+                    <div class="panel-body">
+                        <a style="cursor: pointer" data-toggle="collapse" data-target="#@transaction.Id">Details</a>
+                        <div id="@transaction.Id" class="collapse">
+                            @if (transaction.LumberTransactionDetails.Any())
+                            {
+                                var model = new LumberTransactionDetails { AdjustmentMultiplier = adjustmentMultiplier, Details = transaction.LumberTransactionDetails };
+                                @Html.Partial("_LumberTransactionDetails", model)
+                            }
+                            @if (transaction.MiscellaneousTransactionDetails.Any())
+                            {
+                                var model = new MiscellaneousTransactionDetails { AdjustmentMultiplier = adjustmentMultiplier, Details = transaction.MiscellaneousTransactionDetails };
+                                @Html.Partial("_MiscellaneousTransactionDetails", model)
+                            }
+                        </div>
+                    </div>
+                </div>
             }
         </div>
     </div>
-
 </div>
 
 <div id="deletingPanel" style="display: none;">Deleting...</div>
