Added error handling for different types of errors including unauthorized error. Added authorize roles to restricted controller methods.

--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -5,14 +5,31 @@
                 <h1>Progress Report</h1>
             </div>
             <p>
-                This is a summary of progress with this site. It doesn't include all the technical details that went into
-                it or a full worklog, but focuses more on features that can be seen in the web site itself.
+                Hey guys! Here is a list of features that I've completed. If you're feeling ambitions
+                and have some spare time, maybe you can try see if you can spot the changes and try
+                out any new features.
             </p>
         </div>
     </section>
 }
 <h3>Progress Report:</h3>
 <ul>
+    <li>
+        <h5>4/3/2016</h5>
+        <ul>
+            <li>Added transaction history to order review.</li>
+            <li>Calculate order linear feet and square feet on the fly.</li>
+            <li>Added highlighting to sales order amounts over the quantity on hand.</li>
+        </ul>
+    </li>
+    <li>
+        <h5>4/3/2016</h5>
+        <ul>
+            <li>Added transaction history to order review.</li>
+            <li>Calculate order linear feet and square feet on the fly.</li>
+            <li>Added highlighting to sales order amounts over the quantity on hand.</li>
+        </ul>
+    </li>
     <li>
         <h5>4/1/2016</h5>
         <ul>
